--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,8 @@ https://www.youtube.com/playlist?list=PLfqABt5AS4FmuQf70psXrsMLEDQXNkLq2
 [✅]= finir la fonction surveil qui vient superviser en boucle si la derniere fois qu'il a mange > tt_die
 		ttime(p) - phl[n]->lastteating
 
+[✅]= gerer le cas ou il n'y a qu'un seul philo
+
 [ ]= ajouter l'utilisation du write_mtx qui est accesssible à chaque phl[i] grâce au 
 		pointeur phl[i]->p qui pointe vers la structure principale
 
@@ -17,6 +19,7 @@ https://www.youtube.com/playlist?list=PLfqABt5AS4FmuQf70psXrsMLEDQXNkLq2
 
 	usleep // gettimeofday // pthread_create // pthread_detach // pthread_join // pthread_mutex_init 
 		pthread_mutex_destroy //pthread_mutex_lock // pthread_mutex_unlock
+
 
 
 
