--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,3 @@
-https://www.geeksforgeeks.org/thread-functions-in-c-c/
-https://www.geeksforgeeks.org/condition-wait-signal-multi-threading/?ref=next_article
-
-https://www.youtube.com/playlist?list=PLfqABt5AS4FmuQf70psXrsMLEDQXNkLq2
-
 https://github.com/koekeishiya/yabai
 app pour gerer les windows sur mac
 
@@ -20,13 +15,9 @@ app pour gerer les windows sur mac
 		pour set plh->health = dead, si le mtx du philo est deja pris boucle infini 
 		analyser avec les WHATS HAPPENING philo->id
 
+[ ]= essayer d'inverser l'ordre de take les fourchettes pour le dernier philo !! possible deadlock
 
+[ ]= rajouter un tt_think, si le nombre de philo est impair 
 
-[ ]= Apres avoir mange le philo sleep mais ne think jamais et ne continue donc pas sa routine 
-		je pense qu'il bloque lorsau'il va think et ne sors jamais de la fonction
-
-
- pthread_detach // pthread_join // pthread_mutex_init 
-		pthread_mutex_destroy //pthread_mutex_lock // pthread_mutex_unlock
 
 dont forget tout erase everything in Makefile
