--- a/todo.txt
+++ b/todo.txt
@@ -22,9 +22,21 @@ app pour gerer les windows sur mac
 	ENLEVER FSANITIZE \\\\\\
 
 
-[ ]= essayer d'inverser l'ordre de take les fourchettes pour le dernier philo !! possible deadlock
+[✅]= essayer d'inverser l'ordre de take les fourchettes pour le dernier philo !! possible deadlock
+		il fallait le faire pour tous les philos impair
 
-[ ]= normer le tout
+[✅]= normer le tout
+
+[+] Test #23 Testing philo with 3 610 200 80
+[1...] 1sec - still alive
+[2...] 2sec - still alive
+[3...][+] Test #23 Failed with 3 610 200 80, the philosopher should stay alive for at least 40 seconds
+
+
+[+] Test #24 Testing philo with 3 610 200 200
+[1...] 1sec - still alive
+[2...] 2sec - still alive
+[3...][+] Test #24 Failed with 3 610 200 200, the philosopher should stay alive for at least 40 seconds
 
 
 \\\\\\\\\\\\ Makefile !!
