--- a/todo.txt
+++ b/todo.txt
@@ -31,7 +31,7 @@ app pour gerer les windows sur mac
 [✅]= lorsqu'il y a un ntteat et qu'il est remplit et que c'est la cause de pourquoi quelqu'un meurto
 
 
-[ ]= ne fonctionne pas avec un nombre de philo impair + DATARACE
+[✅]= ne fonctionne pas avec un nombre de philo impair + DATARACE
 
 \\\\\\\\\\\\ Makefile !!
 	ENLEVER FSANITIZE \\\\\\
